Use List.of() consistently for empty, singleton lists.