@@ -29,7 +29,6 @@ import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.sql.Types;
-import java.util.Collections;
 import java.util.List;
 import org.springframework.jdbc.core.BatchPreparedStatementSetter;
 import org.springframework.jdbc.core.PreparedStatementCreator;
@@ -55,7 +54,7 @@ public final class InsertLocationRequest
 	 *        the request
 	 */
 	public InsertLocationRequest(LocationRequest request) {
-		this(Collections.singletonList(requireNonNullArgument(request, "request")), false);
+		this(List.of(requireNonNullArgument(request, "request")), false);
 	}
 
 	/**
