@@ -38,6 +38,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.function.Function;
@@ -230,7 +231,7 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 								sourceId);
 						prevInputData = previousInputDao.getAndPut(key, inputData);
 						if ( prevInputData == null ) {
-							return Collections.emptyList();
+							return List.of();
 						}
 						params.put(TransformService.PARAM_PREVIOUS_INPUT,
 								new ByteArrayInputStream(prevInputData));
