@@ -30,7 +30,6 @@ import java.io.StringWriter;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -150,7 +149,7 @@ public class XsltTransformService extends BaseXsltService implements TransformSe
 		Map<String, ?> props = config.getServiceProperties();
 		Object xslt = (props != null ? props.get(SETTING_XSLT) : null);
 		if ( xslt == null ) {
-			return Collections.emptyList();
+			return List.of();
 		}
 		Templates templates = templates(xslt.toString(), config, parameters);
 		try {
@@ -217,9 +216,9 @@ public class XsltTransformService extends BaseXsltService implements TransformSe
 		if ( root.isObject() ) {
 			Datum d = objectMapper.treeToValue(root, Datum.class);
 			if ( !(d == null || d.asSampleOperations().isEmpty()) ) {
-				return Collections.singletonList(d);
+				return List.of(d);
 			}
-			return Collections.emptyList();
+			return List.of();
 		}
 		List<Datum> result = new ArrayList<>(root.size());
 		for ( JsonNode n : root ) {
