@@ -27,7 +27,6 @@ import static java.util.stream.Collectors.toList;
 import static net.solarnetwork.central.user.billing.snf.domain.SnfInvoiceItem.DEFAULT_ITEM_ORDER;
 import static net.solarnetwork.central.user.billing.snf.domain.SnfInvoiceItem.META_AVAILABLE_CREDIT;
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
@@ -154,7 +153,7 @@ public final class SnfBillingUtils {
 			final MessageSource messageSource, final Locale locale) {
 		List<InvoiceItem> invoiceItems;
 		if ( invoice.getItems() == null ) {
-			invoiceItems = Collections.emptyList();
+			invoiceItems = List.of();
 		} else if ( locale != null ) {
 			invoiceItems = invoice.getItems().stream().sorted(DEFAULT_ITEM_ORDER).map(e -> {
 				String desc = messageSource.getMessage(e.getKey() + ".item", null, null, locale);
