@@ -30,7 +30,6 @@ import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -159,13 +158,13 @@ public class DaoUserExportBiz implements UserExportBiz, AppEventHandler {
 	@Override
 	public Iterable<DatumExportOutputFormatService> availableOutputFormatServices() {
 		List<DatumExportOutputFormatService> svcs = this.outputFormatServices;
-		return (svcs != null ? svcs : Collections.emptyList());
+		return (svcs != null ? svcs : List.of());
 	}
 
 	@Override
 	public Iterable<DatumExportDestinationService> availableDestinationServices() {
 		List<DatumExportDestinationService> svcs = this.destinationServices;
-		return (svcs != null ? svcs : Collections.emptyList());
+		return (svcs != null ? svcs : List.of());
 	}
 
 	@Override
